# the-wilds

./: .gitignore  Cargo.toml
client-cli/: Cargo.toml
client-cli/src/: main.rs
client-lib/: Cargo.toml
client-lib/src/: lib.rs
client-tui/: Cargo.toml
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/character_sheet/: effect.rs  mod.rs  resource.rs  stats.rs  tester.rs
server/src/combat/: combat.rs
shared/src/: lib.rs
shared/src/character_sheet/: mod.rs
tui-client/: Cargo.toml
tui-client/src/: main.rs
web-client/: Cargo.toml
web-client/src/: lib.rs
web-client/www/: index.js  package-lock.json  package.json  stuff.txt
