[package]
name = "client-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.195"
serde_json = "1.0.111"
shared = { path = "../shared" }
client-lib = { path = "../client-lib" }
tui = "0.19.0"
