[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
human-panic = "1.2.3"
log = "0.4.20"
rayon = "1.8.1"
serde = "1.0.195"
serde_derive = "1.0.195"
serde_json = "1.0.111"
shared = { path = "../shared" }
