[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
clap = { version = "4.4.18", features = ["derive"] }
human-panic = "1.2.3"
log = "0.4.20"
serde = "1.0.195"
serde_derive = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.36.0", features = ["full"] }
